fixed text alignment in login page

--- a/todolist_server/task_display/static/task_display/login.css
+++ b/todolist_server/task_display/static/task_display/login.css
@@ -12,3 +12,7 @@
 form {
     padding: +50px !important;
 }
+
+nav {
+    text-align: center !important;
+}
